登陆 双击推出

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
   "EMAIL": "Email",
   "USERNAME": "Username",
   "PASSWORD": "Password",
-  "LOGIN": "Sign in",
+  "FORGET": "Forget your password",
   "SIGNUP": "Sign up",
 
   "TAB1_TITLE": "Items",
