--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -5,7 +5,7 @@
   "EMAIL": "邮箱",
   "USERNAME": "用户名",
   "PASSWORD": "密码",
-  "LOGIN": "登录",
+  "FORGET": "忘记密码",
   "SIGNUP": "注册",
 
   "TAB1_TITLE": "发现",
