--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
   "EMAIL": "Email",
   "USERNAME": "Username",
   "PASSWORD": "Password",
-  "FORGET": "Forget your password",
+  "FORGET": "Forget",
   "SIGNUP": "Sign up",
 
   "TAB1_TITLE": "Items",
