--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,70 +1,53 @@
 {
   "BACK_BUTTON_TEXT": "Back",
-
   "NAME": "Name",
   "EMAIL": "Email",
   "USERNAME": "Username",
   "PASSWORD": "Password",
   "FORGET": "Forget",
   "SIGNUP": "Sign up",
-
   "TAB1_TITLE": "Items",
   "TAB2_TITLE": "Search",
   "TAB3_TITLE": "Settings",
   "TAB4_TITLE": "Profile",
-
   "HOME_TITLE": "HOME",
   "CHAT_TITLE": "CHAT",
   "NEWS_TITLE": "NEWS",
   "PROFILE_TITLE": "PROFILE",
-
   "MAP_TITLE": "Map",
-
   "TUTORIAL_SKIP_BUTTON": "Skip",
   "TUTORIAL_CONTINUE_BUTTON": "Continue",
-
   "TUTORIAL_SLIDE1_TITLE": "Welcome to the Ionic Super Starter",
   "TUTORIAL_SLIDE1_DESCRIPTION": "The <b>Ionic Super Starter</b> is a fully-featured Ionic starter with many pre-built pages and best practices.",
-
   "TUTORIAL_SLIDE2_TITLE": "How to use the Super Starter",
   "TUTORIAL_SLIDE2_DESCRIPTION": "Assemble the various page types you want and remove the ones you don't. We've provided many common mobile app page layouts, like login and signup pages, tabs, and this tutorial page.",
-
   "TUTORIAL_SLIDE3_TITLE": "Ready to Play?",
-
   "WELCOME_INTRO": "The starting point for your next great Ionic app",
-
   "SETTINGS_TITLE": "Settings",
   "SETTINGS_OPTION1": "Option 1",
   "SETTINGS_OPTION2": "Option 2",
   "SETTINGS_OPTION3": "Option 3",
   "SETTINGS_OPTION4": "Option 4",
-
   "SETTINGS_PROFILE_BUTTON": "Edit Profile",
-
   "SETTINGS_PAGE_PROFILE": "Edit Profile",
-
   "WELCOME_TITLE": "Welcome",
-
   "LOGIN_TITLE": "Sign in",
   "LOGIN_ERROR": "Unable to sign in. Please check your account information and try again.",
   "LOGIN_BUTTON": "Sign in",
   "SIGNUP_TITLE": "Sign up",
   "SIGNUP_ERROR": "Unable to create account. Please check your account information and try again.",
   "SIGNUP_BUTTON": "Sign up",
-
   "LIST_MASTER_TITLE": "Items",
-
   "ITEM_CREATE_TITLE": "New Item",
   "ITEM_CREATE_CHOOSE_IMAGE": "Add Image",
-
   "ITEM_NAME_PLACEHOLDER": "Name",
   "ITEM_ABOUT_PLACEHOLDER": "About",
-
   "DONE_BUTTON": "Done",
   "CANCEL_BUTTON": "Cancel",
   "DELETE_BUTTON": "Delete",
-
   "CARDS_TITLE": "Social",
-
-  "SEARCH_TITLE": "Search page and question"
+  "SEARCH_TITLE": "Search page and question",
+  "LOADING_TEXT": "Loading more data...",
+  "REFRESHING_TEXT": "Refreshing...",
+  "PULLING_TEXT":"Pull to refresh"
 }
