--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -1,70 +1,53 @@
 {
   "BACK_BUTTON_TEXT": "返回",
-
   "NAME": "姓名",
   "EMAIL": "邮箱",
   "USERNAME": "用户名",
   "PASSWORD": "密码",
   "FORGET": "忘记密码",
   "SIGNUP": "注册",
-
   "TAB1_TITLE": "发现",
   "TAB2_TITLE": "话题",
   "TAB3_TITLE": "发起",
   "TAB4_TITLE": "我的",
-
   "HOME_TITLE": "发现",
   "CHAT_TITLE": "话题",
   "NEWS_TITLE": "发起",
   "PROFILE_TITLE": "我的",
-
   "MAP_TITLE": "地址",
-
   "TUTORIAL_SKIP_BUTTON": "跳过",
   "TUTORIAL_CONTINUE_BUTTON": "继续",
-
   "TUTORIAL_SLIDE1_TITLE": "欢迎加入Spring4All社区",
   "TUTORIAL_SLIDE1_DESCRIPTION": "Spring For All 玩最纯粹的技术！做最专业的 Spring 民间组织~",
-
   "TUTORIAL_SLIDE2_TITLE": "Spring For All，关于Spring 的一切",
   "TUTORIAL_SLIDE2_DESCRIPTION": "我们专注于研究、分享、交流关于Spring的一切!",
-
   "TUTORIAL_SLIDE3_TITLE": "开始社区之旅",
-
   "WELCOME_INTRO": "Spring4All社区",
-
   "SETTINGS_TITLE": "设置",
   "SETTINGS_OPTION1": "Option 1",
   "SETTINGS_OPTION2": "Option 2",
   "SETTINGS_OPTION3": "Option 3",
   "SETTINGS_OPTION4": "Option 4",
-
   "SETTINGS_PROFILE_BUTTON": "编辑信息",
-
   "SETTINGS_PAGE_PROFILE": "编辑信息",
-
   "WELCOME_TITLE": "欢迎",
-
   "LOGIN_TITLE": "登录",
   "LOGIN_ERROR": "登录失败，请检查您的账户后重试",
   "LOGIN_BUTTON": "登录",
   "SIGNUP_TITLE": "注册",
   "SIGNUP_ERROR": "注册失败，请检查您的填写信息",
   "SIGNUP_BUTTON": "注册",
-
   "LIST_MASTER_TITLE": "发现",
-
   "ITEM_CREATE_TITLE": "新建",
   "ITEM_CREATE_CHOOSE_IMAGE": "添加",
-
   "ITEM_NAME_PLACEHOLDER": "姓名",
   "ITEM_ABOUT_PLACEHOLDER": "关于我",
-
   "DONE_BUTTON": "完成",
   "CANCEL_BUTTON": "取消",
   "DELETE_BUTTON": "删除",
-
   "CARDS_TITLE": "社交",
-
-  "SEARCH_TITLE": "搜索文章、提问"
+  "SEARCH_TITLE": "搜索文章、提问",
+  "LOADING_TEXT": "加载更多...",
+  "REFRESHING_TEXT": "刷新中...",
+  "PULLING_TEXT":"下拉刷新"
 }
