--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -51,5 +51,6 @@
   "REFRESHING_TEXT": "刷新中...",
   "PULLING_TEXT":"下拉刷新",
   "BANK_TEXT":"返回",
-  "NETWORK_ERROR":"网络好像不通了(⊙o⊙)"
+  "NETWORK_ERROR":"网络好像不通了(⊙o⊙)",
+  "ADVERT_TXT":"广告"
 }
