--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -6,13 +6,9 @@
   "PASSWORD": "密码",
   "FORGET": "忘记密码",
   "SIGNUP": "注册",
-  "TAB1_TITLE": "发现",
-  "TAB2_TITLE": "发起",
-  "TAB3_TITLE": "话题",
-  "TAB4_TITLE": "我的",
-  "HOME_TITLE": "发现",
-  "CHAT_TITLE": "话题",
-  "NEWS_TITLE": "发起",
+  "HOME_TITLE": "综合",
+  "CHAT_TITLE": "吐槽",
+  "NEWS_TITLE": "发现",
   "PROFILE_TITLE": "我的",
   "MAP_TITLE": "地址",
   "TUTORIAL_SKIP_BUTTON": "跳过",
